--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ permissions:
 
 env:
   JAVA_VERSION: "17"
-  MIN_COVERAGE: 70
+  MIN_COVERAGE: "70"
 
 jobs:
   detect-changes:
@@ -28,7 +28,7 @@ jobs:
       - name: Detect changed microservices
         id: detect
         run: |
-          git fetch origin main
+          git fetch origin main || true
           CHANGED=$(git diff --name-only origin/main...HEAD | grep -E '^(customers-service|vets-service|visit-service|api-gateway|admin-server|discovery-server|config-server)/' | cut -d'/' -f1 | sort -u | xargs)
           echo "Changed services: $CHANGED"
           echo "changed=$CHANGED" >> $GITHUB_OUTPUT
@@ -39,10 +39,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
+
       - uses: actions/cache@v4
         with:
           path: ~/.m2
@@ -79,28 +81,35 @@ jobs:
           path: '**/target/site/jacoco/jacoco.xml'
 
   coverage-check:
-    name: Verify Coverage ≥ ${{ env.MIN_COVERAGE }}%
+    name: Verify coverage threshold
     needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/download-artifact@v4
         with:
           name: jacoco-reports
           path: ./reports
 
-      - name: Calculate coverage
+      - name: Calculate coverage and validate
+        env:
+          MIN_COVERAGE: ${{ env.MIN_COVERAGE }}
         run: |
           total_missed=0
           total_covered=0
-          for file in $(find ./reports -name "jacoco.xml"); do
+          for file in $(find ./reports -name "jacoco.xml" || true); do
             while read -r line; do
-              missed=$(echo "$line" | grep -oP 'missed="\K[0-9]+')
-              covered=$(echo "$line" | grep -oP 'covered="\K[0-9]+')
+              missed=$(echo "$line" | grep -oP 'missed="\K[0-9]+' || echo 0)
+              covered=$(echo "$line" | grep -oP 'covered="\K[0-9]+' || echo 0)
               total_missed=$((total_missed + missed))
               total_covered=$((total_covered + covered))
-            done < <(grep '<counter type="INSTRUCTION"' "$file")
+            done < <(grep '<counter type="INSTRUCTION"' "$file" || true)
           done
+          if [ "$total_covered" -eq 0 ] && [ "$total_missed" -eq 0 ]; then
+            echo "No coverage data found."
+            exit 1
+          fi
           coverage=$(awk -v c=$total_covered -v m=$total_missed 'BEGIN {printf "%.2f", c*100/(c+m)}')
           echo "Coverage: $coverage%"
           if (( $(echo "$coverage < $MIN_COVERAGE" | bc -l) )); then
@@ -116,10 +125,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: ${{ env.JAVA_VERSION }}
+
       - uses: actions/cache@v4
         with:
           path: ~/.m2
