--- a/spring-petclinic-vets-service/pom.xml
+++ b/spring-petclinic-vets-service/pom.xml
@@ -10,8 +10,9 @@
 
 	<parent>
 		<groupId>org.springframework.samples</groupId>
-		<artifactId>spring-petclinic-microservices</artifactId>
+        <artifactId>spring-petclinic-microservices</artifactId>
         <version>3.4.1</version>
+        <relativePath>../pom.xml</relativePath>
 	</parent>
 
     <properties>
