Add debug step for listing Jacoco files and directories
Add debug step to list coverage files and directories

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,14 @@ jobs:
               cd ..
             done
           fi
+          
+      - name: Debug list files in workspace
+        if: always()
+        run: |
+          echo "Listing coverage files..."
+          find . -type f -name "jacoco*.xml" | sort || true
+          echo "Listing target directories..."
+          find . -type d -name "jacoco" | sort || true
 
       - name: Upload test reports
         if: always()
